--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Solid App</title>
+    <link rel="shortcut icon" type="image/ico" href="/icon.svg" />
+    <link rel="icon" href="/icon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="512x512" />
+    <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
+    <title>PromptPay QR Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
