--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="shortcut icon" type="image/ico" href="/icon.svg" />
-    <link rel="icon" href="/icon.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="512x512" />
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
     <title>PromptPay QR Generator</title>
